# pattern_follower

./: .CMakeLists.txt.swn  .CMakeLists.txt.swo  .CMakeLists.txt.swp  .atom-dbg.cson  .clang_complete  .gitignore  CMakeLists.txt  README.md  bill.txt  cmake_install.cmake  config.yaml  dist.txt  kalman_pos_pioner.txt  main.cpp  new.txt  real_pos_pioner.txt  rob_calculated.txt  rob_real.txt
calibration/: default.xml  files.xml
calibration/images/: resize
cam_calib/: Makefile  camera_calibration  camera_calibration.cc  camera_calibration.h  capture_chessboards.cc  default.xml  files.xml  out_camera_data.xml
cmake-configs/: FindPatternFollower.cmake
include/: cam_calibration.h  includes.h  measurement.h  pid.h  pos_client.h  rcm.h  robot.h  roidetector.h  tamplatematcher.h  thread_util.h
include/pattern_follower/: CMessage.h  CMessageClient.h  application.h  application.hpp  arucodetector.h  cam_calibration.h  camera.h  camera_calibration.h  contourfinder.h  detector.h  er1robot.h  histogram.h  includes.h  kalman_filter.h  loader.h  map.h  measurement.h  parser.h  pattern.h  pid.h  pos_client.h  rcm.h  robot.h  robot_control.h  roidetector.h  tamplatematcher.h  templatematcher.h  text_socket.h  thread_util.h  utils.h  vfh.h
src/: CMessage.cc  CMessageClient.cc  application.cpp  arucodetector.cpp  cam_calibration.cc  camepa.cpp  camera.cpp  camera_calibration.cc  contourfinder.cpp  er1robot.cpp  histogram.cpp  kalman_filter.cpp  loader.cpp  map.cpp  measurement.cpp  parser.cpp  pattern.cpp  pid.cpp  pos_client.cc  rcm.cpp  robot.cpp  robot_control.cpp  roidetector.cpp  tamplatematcher.cpp  templatematcher.cpp  text_socket.cc  thread_util.cc  utils.cpp  vfh.cpp
